# C-C-plus-plus---exercises

ImageHash_LS/: CMakeLists.txt  HashImages.cpp  HashImages.h  ImageTagger.cpp  ImageTagger.h  PixelLabel.cpp  PixelLabel.h  image.cpp  image.h  library.cpp  mapTree.cpp  mapTree.h  nodeTree.cpp  nodeTree.h
World_of_cplusplus/: Game.h  game.cpp  player.cpp  player.h  weapon.cpp  weapon.h
